--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,37 @@
 
   <title>portfolio</title>
   <link rel="manifest" href="manifest.json">
+
+  <style>
+    body {
+        background-size: 400% 400%;
+        animation: moveAndRotateGradient 30s ease 1;
+        background-color: #060D1A;
+    }
+
+    @keyframes moveAndRotateGradient {
+        0% {
+            background-image: linear-gradient(-45deg, #0A1128, #2C3E50, #0D131C, #17202A);
+            background-position: 0% 50%;
+        }
+        25% {
+            background-image: linear-gradient(-50deg, #0A1128, #2C3E50, #0D131C, #17202A);
+            background-position: 50% 100%;
+        }
+        50% {
+            background-image: linear-gradient(-55deg, #0A1128, #2C3E50, #0D131C, #17202A);
+            background-position: 100% 50%;
+        }
+        75% {
+            background-image: linear-gradient(-60deg, #0A1128, #2C3E50, #0D131C, #17202A);
+            background-position: 50% 0%;
+        }
+        100% {
+            background-image: linear-gradient(-65deg, #0A1128, #2C3E50, #0D131C, #17202A);
+            background-position: 0% 50%;
+        }
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
